fix: compatible issue that recalculate visibleDateRange when switch view mode under firefox browser

--- a/src/styles/gantt.css
+++ b/src/styles/gantt.css
@@ -125,7 +125,7 @@ body {
 }
 
 /* Tooltip */
-#__gantt-tooltip {
+.__gantt-tooltip {
   position: fixed;
   display: none;
   padding: 12px;
